--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tele_username: albawid
 
 permalink: /posts/:title/
 
-maskot: /assets/img/maskot/hehe300x300.png
+maskot: /assets/img/maskot/tohru300x300.png
 gambar: /assets/img
 favico: /assets/img/favico
 addon: /assets/css/_addon
@@ -83,8 +83,8 @@ comments:
 utterances:
   repo:                "albawid/albawid.github.io"
   issue-term:          "pathname"
-  label:               "Comments"
-  theme:               "github-light"
+  label:               "Komentar"
+  theme:               "gruvbox-dark"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
